# voicetools

./: .gitignore  AGENTS.md  Cargo.toml  MODELS_NOTICE.md  README.md
.agents/commands/: pr.md
.github/workflows/: ci.yml  mirror-models.yml  release.yml
ci/: README.md
ci-templates/: mirror-models.yml
docs/ci/: README.md  release.yml
docs/hoocode-integration/: README.md  voice-transcribe.ts
src/: audio.rs  main.rs  mic.rs  protocol.rs  serve.rs  setup.rs  tls.rs  vad.rs
src/transcribe/: mod.rs  parakeet.rs  whisper.rs
