[package]
name = "voicetools"
version = "0.1.3"
edition = "2021"
description = "Local, offline voice-to-text for the terminal — Parakeet (ONNX) with a Whisper fallback"
license = "MIT"
repository = "https://github.com/kolisachint/voicetools"

[[bin]]
name = "voicetools"
path = "src/main.rs"

[features]
default = ["parakeet"]
# Parakeet TDT via ONNX Runtime (recommended backend)
parakeet = ["dep:ort", "dep:ndarray"]
# whisper.cpp fallback backend
whisper = ["dep:whisper-rs"]

[dependencies]
# --- Parakeet backend (optional) ---
ort     = { version = "=2.0.0-rc.10", optional = true, features = ["download-binaries"] }
ndarray = { version = "0.16", optional = true }

# --- Whisper backend (optional) ---
whisper-rs = { version = "0.12", optional = true }

# --- Always-on: mic, audio, CLI, downloads ---
cpal   = "0.15"
hound  = "3.5"           # WAV decode for `--wav` and tests
ureq   = { version = "2", features = ["tls", "native-certs", "proxy-from-env"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.7"
rustls-pemfile = "2"
webpki-roots = "0.26"
dirs   = "5"
anyhow = "1"
clap   = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = true
strip = true
